--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,11 +1,15 @@
-@(message: String)
+@()(implicit request: play.api.mvc.RequestHeader)
 
-@layout.main("eu2012") {
+@layout.main("Home") {
     
     Hi there
     
     <ul>
     	<li><a href="@routes.Application.showTeams()">teams</a></li>
+    	<li><a href="@routes.Application.showGroups()">groups</a></li>
+    	<li><a href="@@routes.Application.showSchedule()">schedule</a></li>
+    	<li><a href="@@routes.Application.showStandings()">standings</a></li>
+    	<li><a href="@routes.Admin.showAdmin()">admin</a></li>
     </ul>
     
 }
