--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -1,15 +1,59 @@
-@(title: String)(content: Html)
+@(title: String, head: Html = Html.empty)(content: Html)(implicit request: play.api.mvc.RequestHeader)
 
 <!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <!-- <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"> -->
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
+		@head
     </head>
     <body>
-        @content
+    	<header class="topbar" data-dropdown="dropdown">
+    		<div class="fill">
+        		<div class="container">
+          			<a class="brand" href="#">Eu2012</a>
+					
+					<ul class="nav">
+            			<li class="active"><a href="@routes.Application.index()">Home</a></li>
+            			<li><a href="#">About</a></li>
+            			<li><a href="#">Contact</a></li>
+          			</ul>
+          			
+<!--           			<form action="" class="pull-right">
+            			<input class="input-small" type="text" placeholder="Username">
+            			<input class="input-small" type="password" placeholder="Password">
+            			<button class="btn" type="submit">Sign in</button>
+          			</form>
+ -->      				 
+ 					<ul class="nav secondary-nav">
+ 					@request.session.get(controllers.Security.USERNAME).map { user =>
+						<li class="dropdown">
+	              			<a href="#" class="dropdown-toggle">@user</a>
+	              			<ul class="dropdown-menu">
+								<li><a href="@routes.Security.logout">Logout</a></li>
+							</ul>
+						</li>
+        			}.getOrElse {
+        				<li><a href="@routes.Security.login()">Login</a></li>
+        			}
+        			</ul>
+ 				</div>
+      		</div>
+    	</header>
+
+		<div class="container">
+			<div class="content">
+				@content
+			</div>
+	
+			<footer>
+				<p>&copy; OzB 2011</p>
+			</footer>
+		</div>
     </body>
 </html>
