refactored Match model

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -86,6 +86,14 @@ body {
 	padding-top: 60px;
 }
 
+section#admin input.error {
+	background-color: #F6CECE; 
+}
+
+.invisible {
+	visibility: hidden;
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Groups ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 a.group {
