--- a/app/views/schedule.scala.html
+++ b/app/views/schedule.scala.html
@@ -6,6 +6,12 @@
     	<h1>Schedule
     		<small>Matches played and upcoming matches</small>
     	</h1>
+    	
+    	<ul class="pills">
+	    @models.Phase.values.toSeq.map { phase => 
+    		<li><a href="#@phase">@Messages("phase." + phase)</a></li>
+    	}
+    	</ul>
     </div>
     
     <div class="row">
@@ -14,8 +20,46 @@
     @models.Phase.values.toSeq.map { phase => 
     	@println("phase = " + phase)
     	
+    	<a name="@phase"></a>
     	<h2 class="center underline color:">@Messages("phase." + phase)</h2>
+
+	<!--@* group matches by date so we can display matches played day by day  *@-->
+	@defining(matchesByPhase(phase.toString).groupBy(zmatch => zmatch.kickoffDay)) { matchesByDate =>
+		@matchesByDate.keys.toSeq.sorted.map { date =>
+			<div class="koDate">@date.format("EEEEE', the' dd 'of' MMMMM yyyy")</div>
+
+			<table class="match">
+	    	@matchesByDate(date).map { zmatch =>
+	    		<tr>
+		    		@if(! zmatch.isFormula) {
+	    				<td>
+			    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamA.get))">
+	    				</td>
+	    				<td>@zmatch.teamA</td>
+		    		} else {
+		    			<td></td>
+		    			<td>@zmatch.teamAformula</td>
+		    		}
+	    			<td>
+	    				<span class="koTime">@zmatch.kickoff.format("HH:mm")</span>
+	    			</td>
+    				@if(! zmatch.isFormula) {
+		    			<td>@zmatch.teamB</td>
+		    			<td>
+			    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamB.get))">
+		    			</td>
+		    		} else {
+		    			<td>@zmatch.teamBformula</td>
+		    			<td></td>
+		    		}
+	    		</tr>
+	    	}
+	    	</table>
+		}
+	}
+
     	
+@*    	
     	@matchesByPhase(phase.toString).map { zmatch =>
 	    	<div class="sched">
 	    		<span class="koDate">@zmatch.kickoff.format("EEEEE', the' dd 'of' MMMMM yyyy")</span>
@@ -23,16 +67,19 @@
 	    		@if(! zmatch.isFormula) {
 	    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamA.get))">
 	    		}
-	    		@zmatch.teamA
-	    		<span class="koTime">@zmatch.kickoff.format("HH:mm")</span>
-	    		@zmatch.teamB
+	    			<p>
+	    				@zmatch.teamA
+			    		<span class="koTime">@zmatch.kickoff.format("HH:mm")</span>
+			    		@zmatch.teamB
+	    			</p>
 	    		@if(! zmatch.isFormula) {
 	    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamB.get))">
 	    		}
 	    		</div>
 	    	</div>
     	}
-    	
+*@
+  	
     }
 	</div>    
 }
