--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,7 +8,7 @@
     	<li><a href="@routes.Application.showTeams()">teams</a></li>
     	<li><a href="@routes.Application.showGroups()">groups</a></li>
     	<li><a href="@routes.Application.showSchedule()">schedule/results</a></li>
-    	<li><a href="@@routes.Application.showStandings()">standings</a></li>
+    	<li><a href="@routes.Application.showStandings()">standings</a></li>
     	
     	<li><a href="@@routes.Application.showStandings()">forecasts</a></li>
     	<li><a href="@@routes.Application.showStandings()">ranking</a></li>
