--- a/app/views/schedule.scala.html
+++ b/app/views/schedule.scala.html
@@ -16,11 +16,10 @@
     
     <div class="row">
     
-    @* SET BUG *@
     @models.Phase.values.toSeq.map { phase => 
     	@println("phase = " + phase)
     	
-    	<a name="@phase"></a>
+    	<a name="@phase" style="position: relative; top: -60px;">&nbsp;</a>
     	<h2 class="center underline color:">@Messages("phase." + phase)</h2>
 
 	<!--@* group matches by date so we can display matches played day by day  *@-->
@@ -28,33 +27,7 @@
 		@matchesByDate.keys.toSeq.sorted.map { date =>
 			<div class="koDate">@date.format("EEEEE', the' dd 'of' MMMMM yyyy")</div>
 
-			<table class="match">
-	    	@matchesByDate(date).map { zmatch =>
-	    		<tr>
-		    		@if(! zmatch.isFormula) {
-	    				<td>
-			    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamA.get))">
-	    				</td>
-	    				<td>@zmatch.teamA</td>
-		    		} else {
-		    			<td></td>
-		    			<td>@zmatch.teamAformula</td>
-		    		}
-	    			<td>
-	    				<span class="koTime">@zmatch.kickoff.format("HH:mm")</span>
-	    			</td>
-    				@if(! zmatch.isFormula) {
-		    			<td>@zmatch.teamB</td>
-		    			<td>
-			    			<img src="@routes.Assets.at("images/" + Messages("country.icon.32." + zmatch.teamB.get))">
-		    			</td>
-		    		} else {
-		    			<td>@zmatch.teamBformula</td>
-		    			<td></td>
-		    		}
-	    		</tr>
-	    	}
-	    	</table>
+			@helper.matchesTable(matchesByDate(date))
 		}
 	}
 
