--- a/app/views/group.scala.html
+++ b/app/views/group.scala.html
@@ -8,9 +8,9 @@
     	</h1>
     </div>
     
-    <h2>Standings</h2>
+    <h3 style="text-align: center;">Standings</h3>
     
-    <div class="row">
+    <div class="row" style="width: 430px; margin-left: auto; margin-right: auto;">
     	<ul class="media-grid">
 	    	<li>
 	        	<a href="#" class="group">@helper.groupStandings(group, standings)</a>
@@ -18,7 +18,7 @@
     	</ul>
     </div>
     
-    <h2>Matches</h2>
+    <h3 style="text-align: center;">Matches</h3>
     
     @helper.matchesTable(matches, showDates = true)
 }
