added some user related functionality, added test, modified admin page

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -99,6 +99,10 @@ section#admin input.error {
 	visibility: hidden;
 }
 
+li.active a {
+	outline: none; // remove dotted lines around focus on the active tab (anchor)
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Schedule ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 table.match {
