--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -10,6 +10,11 @@
         <!-- <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"> -->
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
+		<script type="text/javascript">
+			// variable used in external scripts to link assets
+			var assetsRoot = "@routes.Assets.at("")";
+		</script>
 		@head
     </head>
     <body>
