improved errors display in registration process

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -103,6 +103,11 @@ li.active a {
 	outline: none; // remove dotted lines around focus on the active tab (anchor)
 }
 
+span.error {
+	color: red;
+	font-size: 14px;
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Schedule ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 table.match {
