improved login/register pages

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -58,8 +58,8 @@
 		</div>
 		
 		<div class="modal-footer">
+			Not account yet ? <a href="@routes.Security.register()" class="btn small secondary" style="float: none;">Register</a>
 			<a href="#"	class="btn primary" onclick="$('#loginForm').submit()">Submit</a>
-			<a href="@routes.Security.register()" class="btn secondary">Register</a>
 		</div>
 	</div>
 }
