--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -36,7 +36,7 @@
           			</form>
  -->      				 
  					<ul class="nav secondary-nav">
- 					@request.session.get(controllers.Security.USERNAME).map { user =>
+ 					@controllers.Security.username.map { user =>
 						<li class="dropdown">
 	              			<a href="#" class="dropdown-toggle">@user</a>
 	              			<ul class="dropdown-menu">
