added user forecasts in admin/user

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -335,6 +335,14 @@ div.standings {
 	}
 }
 
+// ~~~~~~~~~~~~~~~~~~~~~ Admin ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+table.userForecasts {
+	td {
+		vertical-align: middle;
+	}
+}
+
 // ~~~~~~~~~~~~~~~~~~~~~ Misc ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 h2.center {
