--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -18,6 +18,9 @@
 	<script src="@routes.Assets.at("javascripts/jquery-ui-1.8.16.custom.min.js")"></script>
 	<script src="@routes.Assets.at("javascripts/admin.js")" type="text/javascript"></script>
 	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/themes/cupertino/jquery.ui.all.css")">
+	<script type="text/javascript">
+		var userForecastsUrl = "@routes.Admin.showUserForecasts(":username")";
+	</script>
 }
 
 @layout.main("Admin", head = headContent) {
