more admin tools

--- a/app/views/adminpages/userForecasts.scala.html
+++ b/app/views/adminpages/userForecasts.scala.html
@@ -34,3 +34,9 @@
 		}
 		</tbody>
 	</table>
+	
+	<div class="actions">
+		<button type="button" onclick="deleteUserForecasts('@routes.Admin.deleteUserForecasts(username)')" class="btn small">Delete all</button>
+		<button type="button" onclick="generateRandomForecasts('@routes.Admin.randomForecasts(username)')" class="btn small">Generate Random Forecasts</button>
+	</div>
+	
